automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -291,16 +291,16 @@
     {
      "data": {
       "text/plain": [
-       "'Goodbye'"
+       "' Hello'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greeting = ''\n",
+    "greeting = ' '\n",
     "if greeting:\n",
     "    greeting += 'Hello'\n",
     "else:\n",
