--- a/index.ipynb
+++ b/index.ipynb
@@ -474,9 +474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#average\n"
+     ]
+    }
+   ],
    "source": [
     "number_of_days = 3\n",
     "if number_of_days > 5:\n",
